<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/me"
    tools:context="wizardofoz.userlogin.User1Activity">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="38dp"
        android:text="@string/name_ashiqur_rahman"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="14dp"
        android:text="@string/studentid_1505103"
        android:textColor="@android:color/holo_blue_bright"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView6"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="12dp"
        android:text="@string/blood_group_o"
        android:textColor="@android:color/holo_blue_bright"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView17"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginBottom="16dp"
        android:text="@string/cell_01687226064"
        android:textColor="@android:color/holo_blue_bright"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/backButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView8"
        android:layout_marginBottom="42dp"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/idlink1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView6"
        android:layout_alignParentTop="true"
        android:layout_marginTop="48dp"
        android:text="@string/linktosite1"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/backButton1"
        android:layout_toEndOf="@+id/textView8"
        android:text="A True Legend :3 :3"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

</RelativeLayout>
