<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/doha"
    tools:context="wizardofoz.userlogin.User3Activity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/idlink3"
        android:layout_below="@+id/idlink3"
        android:layout_marginTop="93dp"
        android:text="@string/name_doha_rahat"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="29dp"
        android:text="@string/studentid_1605108"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="29dp"
        android:text="@string/blood_group_b"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView11"
        android:layout_below="@+id/textView11"
        android:layout_marginTop="26dp"
        android:text="@string/cell_01733189401"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/idlink3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="69dp"
        android:text="@string/linktosite3"
        android:textAlignment="viewStart"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/backButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView11"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/backButton3"
        android:layout_alignBottom="@+id/backButton3"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@+id/textView3"
        android:text="Supreme Leader"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold|italic" />
</RelativeLayout>
